--- a/package.json
+++ b/package.json
@@ -19,12 +19,22 @@
   "homepage": "https://github.com/Nessa515/challenge-clinica_v2#readme",
   "dependencies": {
     "@types/express": "^4.17.17",
+    "bcrypt": "^5.1.0",
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-async-errors": "^3.1.1",
+    "http-status-codes": "^2.2.0",
+    "joi": "^17.9.2",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.3.1",
     "nodemon": "^2.0.22",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.1.3"
+    "typescript": "^5.1.3",
+    "uuid": "^9.0.0"
+  },
+  "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.2",
+    "@types/uuid": "^9.0.2"
   }
 }
