feat: seperation of port command in a server file

--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "challenge-clinica-v2",
   "version": "1.0.0",
   "description": "",
-  "main": "app.ts",
+  "main": "server.ts",
   "scripts": {
-    "start": "ts-node src/app.ts",
-    "dev": "nodemon --exec ts-node src/app.ts"
+    "start": "ts-node src/server.ts",
+    "dev": "nodemon --exec ts-node src/server.ts"
   },
   "repository": {
     "type": "git",
