--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/Nessa515/challenge-clinica_v2#readme",
   "dependencies": {
     "@types/express": "^4.17.17",
+    "@types/swagger-ui-express": "^4.1.3",
     "bcrypt": "^5.1.0",
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.3.1",
@@ -29,9 +30,12 @@
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.3.1",
     "nodemon": "^2.0.22",
+    "swagger-ui-express": "^4.6.3",
     "ts-node-dev": "^2.0.0",
+    "tsconfig.json": "^1.0.11",
     "typescript": "^5.1.3",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "yamljs": "^0.3.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
